Install Supabase SDK

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/v0Flow/v0Flow-app#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
