--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "typescript": "^5.8.3"
   }
 }
